--- a/index.html
+++ b/index.html
@@ -292,6 +292,9 @@
             <li><a href="#combat">Combate</a></li>
             <li><a href="#mechanics">Mecânicas</a></li>
             <li><a href="#invaders">Invaders</a></li>
+            <li><a href="#missions">Missões</a></li>
+            <li><a href="#records">Registros</a></li>
+            <li><a href="#characters">Personagens</a></li>
         </ul>
     </nav>
 
@@ -894,6 +897,122 @@
             </table>
         </section>
 
+        <section id="missions">
+            <h2>Missões</h2>
+
+            <div class="mission-card">
+                <h3>Missão 1: Operação Reaver - Recuperar Refém</h3>
+                <p><strong>Contexto:</strong> Um grupo de exploradores foi capturado por um grupo de Skolwargs enquanto investigava uma plataforma de petróleo abandonada. Um deles está vivo, preso em um container na seção B-2. A comandante Valkira ordena a missão.</p>
+
+                <h4>Objetivo:</h4>
+                <ul>
+                    <li>Resgatar o refém antes que os Skolwargs o eliminem.</li>
+                    <li>Opcional: Eliminar todos os Skolwargs para garantir a segurança da plataforma.</li>
+                </ul>
+
+                <h4>Cronograma de Aparição:</h4>
+                <ul>
+                    <li>Turno 1: 1 Skolwarg patrulhando o corredor externo.</li>
+                    <li>Turno 2: 1 Skolwarg aparece da sala de controle, atraído pelo barulho do combate.</li>
+                    <li>Turno 4: 2 Skolwargs surgem na área de contenção, protegendo o container do refém.</li>
+                    <li>Turno 6: 1 Bloodtick desce do teto para tentar capturar o refém.</li>
+                </ul>
+
+                <div class="mission-order">
+                    <h4>Ordem de Missão (Comandante Valkira):</h4>
+                    <blockquote>
+                        "Atenção, Portadores. Os Skolwargs capturaram um dos nossos. Ele está vivo, mas não por muito tempo. Invadam a plataforma, limpem os corredores e cheguem à área de contenção antes que a criatura drene o sangue do refém. E lembrem-se: os Skolwargs não são fáceis de derrubar, então mantenham a formação. Boa sorte."
+                    </blockquote>
+                </div>
+            </div>
+
+            <div class="mission-card">
+                <h3>Missão 2: Incursão no Desfiladeiro - Limpeza de Invasores</h3>
+                <p><strong>Contexto:</strong> A área de mineração 09 foi invadida por um grupo de Gromoths que estão destruindo os equipamentos de perfuração. A comandante Valkira quer a área limpa e os equipamentos recuperados.</p>
+
+                <h4>Objetivo:</h4>
+                <ul>
+                    <li>Eliminar todos os Gromoths na área.</li>
+                    <li>Opcional: Impedir que os Gromoths destruam as perfuratrizes (cada equipamento possui 15 HP e leva 2 de dano por turno enquanto um Gromoth estiver ativo).</li>
+                </ul>
+
+                <h4>Cronograma de Aparição:</h4>
+                <ul>
+                    <li>Turno 1: 1 Gromoth investindo contra a primeira perfuratriz.</li>
+                    <li>Turno 3: 1 Gromoth surge no flanco direito, tentando esmagar os jogadores.</li>
+                    <li>Turno 5: 2 Gromoths entram pelo portão principal, focando nas perfuratrizes.</li>
+                    <li>Turno 7: 1 Spitfang voa para dar suporte aos Gromoths, atacando com ácido.</li>
+                </ul>
+
+                <div class="mission-order">
+                    <h4>Ordem de Missão (Comandante Valkira):</h4>
+                    <blockquote>
+                        "Desfiladeiro 09 está sob ataque. Os Gromoths estão destruindo nossos equipamentos de perfuração. Não podemos perder mais recursos, então limpem a área e protejam as perfuratrizes a todo custo. E cuidado com os Spitfangs — onde há um, há uma colmeia."
+                    </blockquote>
+                </div>
+            </div>
+
+            <div class="mission-card">
+                <h3>Missão 3: Caçada Noturna - Eliminar o Slashwraith</h3>
+                <p><strong>Contexto:</strong> Um Slashwraith foi avistado nas docas da plataforma Delta-4. Ele já matou dois operários e está impedindo a entrega de suprimentos vitais. A comandante Valkira ordena a eliminação do alvo.</p>
+
+                <h4>Objetivo:</h4>
+                <ul>
+                    <li>Eliminar o Slashwraith.</li>
+                    <li>Opcional: Impedir que ele escape da área das docas.</li>
+                </ul>
+
+                <h4>Cronograma de Aparição:</h4>
+                <ul>
+                    <li>Turno 1: O Slashwraith está sozinho, patrulhando a área.</li>
+                    <li>Turno 2: 1 Spitfang aparece e começa a rondar a área, buscando um alvo fácil.</li>
+                    <li>Turno 4: O Slashwraith usa Salto Sombrio para tentar escapar, indo para o setor sul.</li>
+                    <li>Turno 5: 2 Bloodticks emergem dos containers, atraídos pelo cheiro de sangue.</li>
+                </ul>
+
+                <div class="mission-order">
+                    <h4>Ordem de Missão (Comandante Valkira):</h4>
+                    <blockquote>
+                        "O Slashwraith nas docas já fez duas vítimas. Ele é rápido, ele é sorrateiro e ele não vai parar por conta própria. Localizem-no, neutralizem-no e não deixem que ele escape. Se ele alcançar o setor sul, será um pesadelo contê-lo."
+                    </blockquote>
+                </div>
+            </div>
+        </section>
+
+        <section id="records">
+            <h2>Registros</h2>
+
+            <div class="record-card">
+                <h3>📼 Gravação de Áudio Corrompida - Arquivo #0A12</h3>
+                // Conteúdo da gravação aqui
+            </div>
+
+            <div class="record-card">
+                <h3>📄 Relatório de Engenharia - Trecho Roubado</h3>
+                // Conteúdo do relatório aqui
+            </div>
+
+            <div class="record-card">
+                <h3>🖨️ Fax Antigo - Armazenado em um armário enferrujado</h3>
+                <p>Alguns Invasores não evoluíram apenas fisicamente — estão se adaptando para caçar equipamentos humanos. O Slashwraith parece ser uma ameaça adaptativa e inteligente.</p>
+            </div>
+        </section>
+
+        <section id="characters">
+            <h2>Personagens</h2>
+
+            <div class="character-card">
+                <h3>1. Gerente de Setor - Aira Nyx</h3>
+                <p>Aira é responsável por passar as missões para os jogadores, informando detalhes sobre o local, o tipo de inimigos e os objetivos. Ela acompanha o progresso da missão em tempo real através de drones e câmeras fixas, orientando os jogadores e fornecendo atualizações sobre a movimentação dos invasores.</p>
+
+                <h4>Frases Típicas:</h4>
+                <ul>
+                    <li>"Se vocês erraram, corrijam. Não tenho tempo para lamentos."</li>
+                    <li>"Objetivo atualizado. Mantenham a formação e sigam o protocolo."</li>
+                    <li>"Se não conseguirem lidar com isso, posso mandar um esquadrão que saiba como fazer o trabalho."</li>
+                </ul>
+            </div>
+        </section>
     </main>
 
     <button id="topBtn" class="top-btn" title="Voltar ao topo">↑</button>
