--- a/index.html
+++ b/index.html
@@ -271,6 +271,129 @@
                 padding: 8px;
             }
         }
+
+        /* Record styles */
+        .record-card {
+            background-color: var(--card-bg);
+            border-radius: 8px;
+            padding: 20px;
+            margin-bottom: 30px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        .document-header {
+            display: flex;
+            align-items: center;
+            margin-bottom: 15px;
+            gap: 10px;
+        }
+
+        .document-icon {
+            font-size: 1.5rem;
+        }
+
+        .document-title {
+            font-size: 1.2rem;
+            font-weight: 600;
+            color: var(--accent-color);
+        }
+
+        .document-location {
+            font-size: 0.9rem;
+            color: var(--text-color);
+            opacity: 0.8;
+            margin-bottom: 15px;
+        }
+
+        .document-content {
+            background-color: rgba(44, 62, 80, 0.3);
+            padding: 15px;
+            border-radius: 4px;
+            margin-bottom: 15px;
+            font-style: italic;
+        }
+
+        .document-analysis {
+            color: var(--accent-color);
+            font-size: 0.95rem;
+            padding-top: 10px;
+            border-top: 1px solid rgba(231, 76, 60, 0.3);
+        }
+
+        /* Character styles */
+        .character-card {
+            background-color: var(--card-bg);
+            border-radius: 8px;
+            padding: 25px;
+            margin-bottom: 30px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        .character-header {
+            display: flex;
+            align-items: center;
+            gap: 15px;
+            margin-bottom: 20px;
+        }
+
+        .character-number {
+            background-color: var(--accent-color);
+            color: white;
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-weight: bold;
+        }
+
+        .character-name {
+            font-size: 1.4rem;
+            font-weight: 600;
+            color: var(--accent-color);
+        }
+
+        .character-role {
+            color: var(--text-color);
+            opacity: 0.8;
+            font-style: italic;
+        }
+
+        .info-section {
+            margin-bottom: 20px;
+        }
+
+        .info-title {
+            color: var(--accent-color);
+            font-weight: 600;
+            margin-bottom: 8px;
+        }
+
+        .info-content {
+            color: var(--text-color);
+            line-height: 1.6;
+        }
+
+        .quote-list {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+
+        .quote {
+            background-color: rgba(44, 62, 80, 0.3);
+            padding: 10px;
+            border-radius: 4px;
+            font-style: italic;
+        }
+
+        hr {
+            border: none;
+            border-top: 1px solid var(--secondary-color);
+            margin: 30px 0;
+            opacity: 0.3;
+        }
     </style>
 </head>
 
@@ -1275,3 +1398,4 @@
         });
     </script>
 </body>
+</html>
